--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
-working_directory: /usr/src/app/omm2caom2/omm2caom2/tests/data
-netrc_filename: .netrc
+working_directory: /usr/src/app/
+netrc_filename: test_netrc
 resource_id: ivo://cadc.nrc.ca/sc2repo
 todo_file_name: todo.txt
 use_local_files: False
