s2235 - add configurable steps to the ingestion process, plus support for storing data to CADC's ad service, plus support for a test-only option.

--- a/config.yml
+++ b/config.yml
@@ -9,3 +9,21 @@ use_local_files: True
 logging_level: INFO
 # ad stream value - sorry
 stream: raw
+# how to control the work that gets done
+# possible values are:
+# - scrape - read the headers, write out the xml - kind of a test mode
+# - store - calls cadc-data to put a file from local storage (use_local_files must be set to True)
+# - ingest - read the headers, write the xml to the endpoint found by resource_id
+# - enhance - create a footprint and previews for an existing CAOM model record
+#
+# these combinations have been tested:
+# scrape => with use_local_files set to True
+#
+# store, ingest, enhance => with use_local_files set to True
+#
+# ingest, enhance => with use_local_files set to False
+#
+task_types: 
+  - store
+  - ingest
+  - enhance
