--- a/config.yml
+++ b/config.yml
@@ -4,11 +4,13 @@ netrc_filename: test_netrc
 resource_id: ivo://cadc.nrc.ca/sc2repo
 todo_file_name: todo.txt
 # values True False
-use_local_files: True
+use_local_files: False
 # values DEBUG INFO WARN ERROR
 logging_level: DEBUG
 # values True False
 log_to_file: True
+# fully qualified name for a directory to write log files
+log_file_directory: /usr/src/app/logs
 # ad stream value - sorry
 stream: raw
 # how to control the work that gets done
@@ -16,17 +18,17 @@ stream: raw
 # - scrape - read the headers, write out the xml - kind of a test mode
 # - store - calls cadc-data to put a file from local storage (use_local_files must be set to True)
 # - ingest - read the headers, write the xml to the endpoint found by resource_id
-# - enhance - create a footprint and previews for an existing CAOM model record
+# - modify - create a footprint and previews for an existing CAOM model record
 #
 # these combinations have been tested:
 # scrape => with use_local_files set to True
-# scrape, enhance => with use_local_files set to True, will not write to service
+# scrape, modify => with use_local_files set to True, will not write to service
 #
-# store, ingest, enhance => with use_local_files set to True
-# ingest, enhance => with use_local_files set to True
+# store, ingest, modify => with use_local_files set to True
+# ingest, modify => with use_local_files set to True
 #
-# ingest, enhance => with use_local_files set to False
+# ingest, modify => with use_local_files set to False
 #
 task_types: 
   - ingest
-  - enhance
+  - modify
