s2235 - require the netrc_filename value in config.yml to be a fully-qualified name, as requested by Daniel.

--- a/config.yml
+++ b/config.yml
@@ -1,10 +1,11 @@
-working_directory: /usr/src/app
-netrc_filename: test_netrc
+working_directory: /usr/src/app/test_data
+# the netrc_filename value must be a fully-qualified name
+netrc_filename: /usr/src/app/test_netrc
 # operational value is ivo://cadc.nrc.ca/caom2repo
 resource_id: ivo://cadc.nrc.ca/sc2repo
 todo_file_name: todo.txt
 # values True False
-use_local_files: False
+use_local_files: True
 # values DEBUG INFO WARN ERROR
 logging_level: DEBUG
 # values True False
