--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-working_directory: /usr/src/app
+working_directory: /usr/src/app/test_composite
 # the netrc_filename value must be a fully-qualified name
 netrc_filename: /usr/src/app/test_netrc
 # operational value is ivo://cadc.nrc.ca/caom2repo
@@ -31,5 +31,4 @@ stream: raw
 # ingest, modify => with use_local_files set to False
 #
 task_types: 
-  - ingest
-  - modify
+  - scrape
