s2235 - Add a success count and log file to the mix.

--- a/config.yml
+++ b/config.yml
@@ -12,6 +12,10 @@ logging_level: INFO
 log_to_file: True
 # fully qualified name for a directory to write log files
 log_file_directory: /usr/src/app/logs
+# the filename where success logs are written
+#
+# this file is created in the logs directory, default is 'success_log.txt'
+success_log_file_name: success_log.txt
 # the filename where failure logs are written
 #
 # this file is created in the logs directory, default is 'failure_log.txt'
