s2235 - add entry points for the package.

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,3 +44,4 @@ version = 0.1.6
 [entry_points]
 omm2caom2 = omm2caom2:main_app
 omm_run = omm2caom2.omm_composable:run_by_file
+omm_run_single = omm2caom2.omm_composable:run_single
