--- a/config.yml
+++ b/config.yml
@@ -7,7 +7,7 @@ todo_file_name: todo.txt
 # values True False
 use_local_files: True
 # values DEBUG INFO WARN ERROR
-logging_level: INFO
+logging_level: DEBUG
 # values True False
 log_to_file: True
 # fully qualified name for a directory to write log files
