--- a/setup.cfg
+++ b/setup.cfg
@@ -43,5 +43,5 @@ version = 0.1.20
 
 [entry_points]
 omm2caom2 = omm2caom2:main_app
-omm_run = omm2caom2.omm_composable:run_by_file
-omm_run_single = omm2caom2.omm_composable:run_single
+omm_run = omm2caom2.omm_composable:omm_run
+omm_run_single = omm2caom2.omm_composable:omm_run_single
