--- a/setup.cfg
+++ b/setup.cfg
@@ -39,9 +39,10 @@ edit_on_github = False
 github_project = SharonGoliath/omm2caom2
 install_requires = caom2utils
 # version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
-version = 0.1.20
+version = 0.2.0
 
 [entry_points]
 omm2caom2 = omm2caom2:main_app
 omm_run = omm2caom2.omm_composable:omm_run
+omm_run_proxy = omm2caom2.omm_composable:omm_run_proxy
 omm_run_single = omm2caom2.omm_composable:omm_run_single
