--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,8 @@
 working_directory: /usr/src/app/
 # the netrc_filename value must be a fully-qualified name
 netrc_filename: /usr/src/app/netrc
-# operational value is ivo://cadc.nrc.ca/caom2repo
-resource_id: ivo://cadc.nrc.ca/sc2repo
+# test value is ivo://cadc.nrc.ca/sc2repo
+resource_id: ivo://cadc.nrc.ca/caom2repo
 todo_file_name: todo.txt
 # values True False
 use_local_files: True
