--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,6 @@ version = 0.3.6
 
 [entry_points]
 omm2caom2 = omm2caom2:main_app
-omm_run = omm2caom2.omm_composable:omm_run
-omm_run_proxy = omm2caom2.omm_composable:omm_run_proxy
-omm_run_single = omm2caom2.omm_composable:omm_run_single
+omm_run = omm2caom2.composable:run
+omm_run_proxy = omm2caom2.composable:run_proxy
+omm_run_single = omm2caom2.composable:run_single
