--- a/config.yml
+++ b/config.yml
@@ -50,8 +50,9 @@ observable_directory: /usr/src/app/metrics
 # ingest, modify => with use_local_files set to False
 #
 task_types: 
+  - store
   - ingest
   - modify
 features:
-  use_file_names: False
+  use_file_names: True
   use_urls: False
