--- a/setup.cfg
+++ b/setup.cfg
@@ -44,5 +44,6 @@ version = 0.3.7
 [entry_points]
 omm2caom2 = omm2caom2.main_app:omm_main_app
 omm_run = omm2caom2.composable:run
+omm_run_todo = omm2caom2.composable:run_todo
 omm_run_proxy = omm2caom2.composable:run_proxy
 omm_run_single = omm2caom2.composable:run_single
