--- a/omm2caom2/tests/data/config.yml
+++ b/omm2caom2/tests/data/config.yml
@@ -1,4 +1,4 @@
-working_directory: /usr/src/app/build/omm2caom2/omm2caom2/tests/data
+working_directory: /usr/src/app/omm2caom2/omm2caom2/tests/data
 netrc_filename: .netrc
 resource_id: ivo://cadc.nrc.ca/sc2repo
 todo_file_name: todo.txt
@@ -6,3 +6,6 @@ use_local_files: False
 task_types:
   - visit
 logging_level: DEBUG
+features:
+  supports_latest_caom: False
+  supports_multiple_files: False
