--- a/config.yml
+++ b/config.yml
@@ -6,7 +6,7 @@ resource_id: ivo://cadc.nrc.ca/ams
 todo_file_name: todo.txt
 # values True False
 use_local_files: True
-# values DEBUG INFO WARN ERROR
+# values DEBUG INFO WARNING ERROR
 logging_level: DEBUG
 # values True False
 log_to_file: True
@@ -34,6 +34,8 @@ collection: OMM
 observe_execution: True
 observable_directory: /usr/src/app/metrics
 rejected_directory: /usr/src/app/rejected
+slack_channel: TODO
+slack_token: TODO
 # how to control the work that gets done
 # possible values are:
 # - scrape - read the headers, write out the xml - kind of a test mode
