CADC-10069 - use StorageInventory, and cadc URIs.

--- a/omm2caom2/tests/data/config.yml
+++ b/omm2caom2/tests/data/config.yml
@@ -7,5 +7,4 @@ task_types:
   - visit
 logging_level: DEBUG
 features:
-  supports_latest_caom: False
-  supports_multiple_files: False
+  supports_latest_client: True
