--- a/config.yml
+++ b/config.yml
@@ -27,9 +27,6 @@ failure_log_file_name: failure_log.txt
 retry_file_name: retries.txt
 retry_failures: True
 retry_count: 1
-# ad stream value - sorry
-stream: raw
-archive: OMM
 collection: OMM
 observe_execution: True
 observable_directory: /usr/src/app/metrics
@@ -57,7 +54,4 @@ task_types:
   - ingest
   - modify
 features:
-  supports_latest_caom: False
-  supports_multiple_files: False
-  use_file_names: True
-  use_urls: False
+  supports_latest_client: True
