--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,19 @@ edit_on_github = False
 github_project = opencadc-metadata-curation/omm2caom2
 install_requires = caom2utils
 # version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
-version = 0.10
+version = 0.11
+install_requires =
+  cadcdata
+  cadctap
+  caom2
+  caom2-repo
+  caom2utils
+  importlib-metadata
+  python-dateutil
+  PyYAML
+  slackclient
+  spherical-geometry
+  vos
 
 [entry_points]
 omm_run = omm2caom2.composable:run
