--- a/setup.cfg
+++ b/setup.cfg
@@ -36,8 +36,7 @@ author_email = cadc@nrc-cnrc.gc.ca
 license = AGPLv3
 url = TBD
 edit_on_github = False
-github_project = opencadc-metadata-curation/omm2caom2
-install_requires = caom2utils
+github_project = opencadc/omm2caom2
 # version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
 version = 0.11
 install_requires =
