CADC-10067 - dependencies in setup.cfg from Dockerfile.

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,7 @@ install_requires =
   cadcdata
   cadctap
   caom2
-  caom2-repo
+  caom2repo
   caom2utils
   importlib-metadata
   python-dateutil
