--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,8 @@
 working_directory: /usr/src/app
+data_sources:
+  - /usr/src/app
+data_source_extensions:
+  - .fits.gz
 # the netrc_filename value must be a fully-qualified name
 netrc_filename: /usr/src/app/netrc
 resource_id: ivo://cadc.nrc.ca/ams
@@ -54,4 +58,5 @@ task_types:
   - ingest
   - modify
 features:
-  supports_latest_client: False
+  supports_latest_client: True
+  supports_decompression: True
