CADC-10067 - add Storage Inventory and decompression support, replace preview and thumbnail generation logic. (#10)
* s2650 - SPIRou regression testing.

* CADC-9555 - remove the second installation of libjpeg-dev.

* CADC-10067 - get the unit tests working with the latest version of caom2pipe.

* CADC-10067 - dependencies in setup.cfg from Dockerfile.

* CADC-10067 - dependencies in setup.cfg from Dockerfile.

* CADC-10067 - dependencies in setup.cfg from Dockerfile.

* CADC-10067 - unit tests working with Storage Inventory and decompression.

* CADC-10067 - previews.

* CADC-10067 - different preview and thumbnail generation algorithm.

* CADC-10067 - preview and thumbnail generation.

* CADC-10067 - config.yml changes.

* CADC-10067 - remove spurious logging message.

* CADC-10067 - remove duplicate test code in test_composable.py

* CADC-10067 - address code review comments.

Co-authored-by: Sharon Goliath <goliaths.cadc@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,10 +36,21 @@ author_email = cadc@nrc-cnrc.gc.ca
 license = AGPLv3
 url = TBD
 edit_on_github = False
-github_project = opencadc-metadata-curation/omm2caom2
-install_requires = caom2utils
+github_project = opencadc/omm2caom2
 # version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
-version = 0.10
+version = 0.11
+install_requires =
+  cadcdata
+  cadctap
+  caom2
+  caom2repo
+  caom2utils
+  importlib-metadata
+  python-dateutil
+  PyYAML
+  slackclient
+  spherical-geometry
+  vos
 
 [entry_points]
 omm_run = omm2caom2.composable:run
