--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 working_directory: /usr/src/app
 # the netrc_filename value must be a fully-qualified name
-netrc_filename: /usr/src/app/netrc
+proxy_file_name: /usr/src/app/cadcproxy.pem
 resource_id: ivo://cadc.nrc.ca/ams
 # resource_id: ivo://cadc.nrc.ca/sc2repo
 # tap_id: ivo://cadc.nrc.ca/sc2tap
