--- a/config.yml
+++ b/config.yml
@@ -56,6 +56,7 @@ data_sources:
   - /usr/src/app
 data_source_extensions:
   - fits.gz
+storage_inventory_resource_id: ivo://cadc.nrc.ca/uvic/minoc
 task_types: 
   - store
   - ingest
