CADC-11992 - add fitsverify to Dockerfile.

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,7 @@ url = TBD
 edit_on_github = False
 github_project = opencadc/omm2caom2
 # version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
-version = 0.12
+version = 0.13
 install_requires =
   cadcdata
   cadctap
@@ -51,6 +51,9 @@ install_requires =
   slackclient
   spherical-geometry
   vos
+
+[flake8]
+max-line-length = 120
 
 [entry_points]
 omm_run = omm2caom2.composable:run
