--- a/setup.cfg
+++ b/setup.cfg
@@ -9,8 +9,8 @@ build-dir = docs/_build
 all_files = 1
 
 [upload_docs]
-upload-dir = docs/_build/html
-show-response = 1
+upload_dir = docs/_build/html
+show_response = 1
 
 [aliases]
 test = pytest
@@ -38,7 +38,7 @@ url = TBD
 edit_on_github = False
 github_project = opencadc/omm2caom2
 # version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
-version = 0.13.1
+version = 0.13.2
 install_requires =
   cadcdata
   cadctap
